@@ -46,11 +46,12 @@ getId <- function() {
 #' @param rd A Date object describing the date to be advanced to the
 #' next business day.
 #' @param days An optional integer offset applied to the date
+#' @param bdc An optional integer defining a business day convention
 #' @return The advanced date is returned
 #' @examples
 #' advanceDate(Sys.Date(), 2)  # today to the next biz day, plus 2 days
-advanceDate <- function(rd, days = 0L) {
-    .Call(`_qlcal_advanceDate`, rd, days)
+advanceDate <- function(rd, days = 0L, bdc = 0L) {
+    .Call(`_qlcal_advanceDate`, rd, days, bdc)
 }
 
 #' Test a vector of dates for business day
