@@ -4,13 +4,15 @@
 \alias{advanceDate}
 \title{Advance a date}
 \usage{
-advanceDate(rd, days = 0L)
+advanceDate(rd, days = 0L, bdc = 0L)
 }
 \arguments{
 \item{rd}{A Date object describing the date to be advanced to the
 next business day.}
 
 \item{days}{An optional integer offset applied to the date}
+
+\item{bdc}{An optional integer defining a business day convention}
 }
 \value{
 The advanced date is returned
