@@ -1,6 +1,8 @@
 // Generated by using Rcpp::compileAttributes() -> do not edit by hand
 // Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
+#include "../inst/include/qlcal.h"
+#include "../inst/include/qlcal_types.h"
 #include <Rcpp.h>
 #include <string>
 #include <set>
@@ -112,21 +114,22 @@ RcppExport SEXP _qlcal_getId() {
     return rcpp_result_gen;
 }
 // advanceDate
-Rcpp::Date advanceDate(Rcpp::Date rd, int days);
-static SEXP _qlcal_advanceDate_try(SEXP rdSEXP, SEXP daysSEXP) {
+Rcpp::Date advanceDate(Rcpp::Date rd, int days, int bdc);
+static SEXP _qlcal_advanceDate_try(SEXP rdSEXP, SEXP daysSEXP, SEXP bdcSEXP) {
 BEGIN_RCPP
     Rcpp::RObject rcpp_result_gen;
     Rcpp::traits::input_parameter< Rcpp::Date >::type rd(rdSEXP);
     Rcpp::traits::input_parameter< int >::type days(daysSEXP);
-    rcpp_result_gen = Rcpp::wrap(advanceDate(rd, days));
+    Rcpp::traits::input_parameter< int >::type bdc(bdcSEXP);
+    rcpp_result_gen = Rcpp::wrap(advanceDate(rd, days, bdc));
     return rcpp_result_gen;
 END_RCPP_RETURN_ERROR
 }
-RcppExport SEXP _qlcal_advanceDate(SEXP rdSEXP, SEXP daysSEXP) {
+RcppExport SEXP _qlcal_advanceDate(SEXP rdSEXP, SEXP daysSEXP, SEXP bdcSEXP) {
     SEXP rcpp_result_gen;
     {
         Rcpp::RNGScope rcpp_rngScope_gen;
-        rcpp_result_gen = PROTECT(_qlcal_advanceDate_try(rdSEXP, daysSEXP));
+        rcpp_result_gen = PROTECT(_qlcal_advanceDate_try(rdSEXP, daysSEXP, bdcSEXP));
     }
     Rboolean rcpp_isInterrupt_gen = Rf_inherits(rcpp_result_gen, "interrupted-error");
     if (rcpp_isInterrupt_gen) {
@@ -505,7 +508,7 @@ static int _qlcal_RcppExport_validate(const char* sig) {
         signatures.insert("void(*setCalendar)(std::string)");
         signatures.insert("std::string(*getName)()");
         signatures.insert("std::string(*getId)()");
-        signatures.insert("Rcpp::Date(*advanceDate)(Rcpp::Date,int)");
+        signatures.insert("Rcpp::Date(*advanceDate)(Rcpp::Date,int,int)");
         signatures.insert("Rcpp::LogicalVector(*isBusinessDay)(Rcpp::DateVector)");
         signatures.insert("Rcpp::LogicalVector(*isHoliday)(Rcpp::DateVector)");
         signatures.insert("Rcpp::LogicalVector(*isWeekend)(Rcpp::DateVector)");
@@ -544,7 +547,7 @@ static const R_CallMethodDef CallEntries[] = {
     {"_qlcal_setCalendar", (DL_FUNC) &_qlcal_setCalendar, 1},
     {"_qlcal_getName", (DL_FUNC) &_qlcal_getName, 0},
     {"_qlcal_getId", (DL_FUNC) &_qlcal_getId, 0},
-    {"_qlcal_advanceDate", (DL_FUNC) &_qlcal_advanceDate, 2},
+    {"_qlcal_advanceDate", (DL_FUNC) &_qlcal_advanceDate, 3},
     {"_qlcal_isBusinessDay", (DL_FUNC) &_qlcal_isBusinessDay, 1},
     {"_qlcal_isHoliday", (DL_FUNC) &_qlcal_isHoliday, 1},
     {"_qlcal_isWeekend", (DL_FUNC) &_qlcal_isWeekend, 1},
